@@ -1,4 +1,5 @@
 3.0.6
+ * Option to specify ProtocolVersion in cassandra-stress (CASSANDRA-11410)
  * ArithmeticException in avgFunctionForDecimal (CASSANDRA-11485)
  * Allow only DISTINCT queries with partition keys or static columns restrictions (CASSANDRA-11339)
  * LogAwareFileLister should only use OLD sstable files in current folder to determine disk consistency (CASSANDRA-11470)
